--- a/views/listings/root.ejs
+++ b/views/listings/root.ejs
@@ -37,7 +37,7 @@
 
     <form method="GET" action="/listings">
 
-        <button class="btn btn-dark add-btn col-12">View All Listings!</button>
+        <button class="btn btn-dark add-btn col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-12">View All Listings!</button>
             
     </form>
     <br><br>
