--- a/views/includes/addreview.ejs
+++ b/views/includes/addreview.ejs
@@ -8,7 +8,7 @@
         <div class="mt-3 mb-3">
 
             <label for="rating" class="form-label">Rating</label>
-            <input type="range" name="review[rating]" min="1" max="5" class="form-control">
+            <input type="range" value="5" name="review[rating]" min="1" max="5" class="form-control">
         </div>
 
         <div class="mb-4">
