--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -47,6 +47,17 @@
 
     </div>
 
+
+    <br><br>
+    
+    <% for(review of listing.reviews) {%>
+
+        <p><%= review %></p>
+
+        <br>
+    
+    <% } %>
+
     <br><br>
 
     <hr>
