--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -21,7 +21,7 @@
         
             <a href="/listings/<%= listing.id %>" style="text-decoration: none;">
 
-                <div class="card col" >
+                <div class="card col listing-card" >
                     <img src=<%= listing.image %> class="card-img-top" alt="listing-image">
                     <div class="card-body">
                         <p class="card-text">
