--- a/views/listings/root.ejs
+++ b/views/listings/root.ejs
@@ -14,7 +14,7 @@
         
             <a href="/listings/<%= listing.id %>" style="text-decoration: none;">
 
-                <div class="card col" >
+                <div class="card listing-card col" >
                     <img src=<%= listing.image %> class="card-img-top" alt="listing-image">
                     <div class="card-body">
                         <p class="card-text">
