--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,7 +100,8 @@ body {
 
 
 
-/* Flash */
+
+/* Flash  Alert*/
 
 .flash-alert {
 
@@ -114,10 +115,18 @@ body {
 
 .success-flash {
 
-    background-color: rgba(209, 231, 221, 0.493) !important;
+    @media (max-width: 570px) {
+
+        background-color: rgba(209, 231, 221, 0.493) !important;
+    }
+
 }
 
 .danger-flash {
 
-    background-color: rgba(248, 215, 218, 0.493) !important;
+    @media (max-width: 570px) {
+
+        background-color: rgba(248, 215, 218, 0.493) !important;
+
+    }
 }
