--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -30,7 +30,7 @@
 
         <button class="btn btn-dark add-btn col-12 mt-4 mb-2">Sign Up</button>
 
-        <div class="mt-1 mb-2">dont have an account?<a href="">login</a></div>
+        <div class="mt-1 mb-2">have an account?<a href="/login">login</a></div>
 
     </form>
 
