--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,6 +10,21 @@
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">New Listing</a>
       </div>
+
+      <div class="navbar-nav ms-auto">
+
+        <% if(!user) {%>
+
+          <a class="nav-link" href="/signup">Sign up</a>
+          <a class="nav-link" href="/login">Login</a>
+
+        <% } else{ %>
+
+          <a class="nav-link" href="/logout">Log out</a>
+
+        <% } %>
+        
+      </div>
     </div>
   </div>
 </nav>
