--- a/views/includes/addreview.ejs
+++ b/views/includes/addreview.ejs
@@ -5,10 +5,23 @@
 
     <form method="POST" action="/listings/<%=listing.id%>/reviews" novalidate class="needs-validation">
 
-        <div class="mt-3 mb-3">
-
+        <div class="mt-3 mb-0">
+            
             <label for="rating" class="form-label">Rating</label>
-            <input type="range" value="5" name="review[rating]" min="1" max="5" class="form-control">
+            <fieldset class="starability-slot">
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
+
         </div>
 
         <div class="mb-4">
