--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -19,7 +19,7 @@
         <div class="col-lg-8  col-md-10 offset-lg-2">
 
             <div class="card col listing-card" >        
-                <img src=<%= listing.image %> class="card-img-top show-img" alt="listing-image">
+                <img src=<%= listing.image.url %> class="card-img-top show-img" alt="listing-image">
                 <div class="card-body">
                         <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
                         
