--- a/views/listings/root.ejs
+++ b/views/listings/root.ejs
@@ -15,7 +15,7 @@
             <a href="/listings/<%= listing.id %>" style="text-decoration: none;">
 
                 <div class="card listing-card col" >
-                    <img src=<%= listing.image %> class="card-img-top" alt="listing-image">
+                    <img src=<%= listing.image.url %> class="card-img-top" alt="listing-image">
                     <div class="card-body">
                         <p class="card-text">
                             <b><%= listing.title %> <br></b>
