--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,13 +10,13 @@
 
     <h1 class="text-center">Create a New Listing</h1>
 
-            <form method="POST" action="/listings" novalidate class="needs-validation">
+            <form method="POST" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
 
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input type="text" name="listing[title]" placeholder="Add a catchy title" class="form-control"
                     required>
-                    <div class="valid-feedback">Title looks good!</div>
+                    <div class="invalid-feedback">Enter title</div>
                 </div>
 
                 <div class="mb-3">
@@ -26,10 +26,10 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="image" class="form-label">Image Link</label>
-                    <input type="text" name="listing[image]" placeholder="enter image URL / link" class="form-control">
+                    <label for="image" class="form-label">Upload Listing Image</label>
+                    <input type="file" name="listing[image]" class="form-control" required>
+                    <div class="invalid-feedback">Upload Image of your property</div>
                 </div>
-
 
                 <div class="row">
 
