--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,11 +3,17 @@
 
 <body>
 
-    <br><br>
+    <div class="filter">
+
+        
+
+    </div>
+
+    <!-- <br><br>
 
     <h1 class="text-center">All Listings</h1>
 
-    <br>
+    <br> -->
 
     <!-- <form method="GET" action="/listings/new">
 
