--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,15 +1,182 @@
 
 <% layout("/layouts/boilerplate") %>
 
-<body>
+<style>
 
-    <div class="filter">
-
+    .tax-info{
         
+        display: none;
+    }
+
+    .search{
+
+        display: flex;
+        
+        margin-top: 1rem;
+    }
+
+    #filter{
+
+        padding: 0.5rem 1rem 0 0.7rem;
+        border: 1px solid grey;
+        border-radius: 1em;
+
+        display: flex;
+        flex-wrap: nowrap;
+
+        overflow-y: scroll;
+    
+        -ms-overflow-style: none;  /* Internet Explorer 10+ */
+        scrollbar-width: none;  /* Firefox, Safari 18.2+, Chromium 121+ */
+    }
+    
+    #filter::-webkit-scrollbar { 
+
+        display: none; /*Older Safari and Chromium */
+    }
+
+
+    .filter{
+
+        text-align: center;
+
+        margin: 0 2rem 0 0;
+
+        opacity: 0.7;
+    }
+
+    .filter:hover{
+
+        transition-duration: 5ms;
+        opacity: 1;
+        cursor: pointer;
+    }
+
+    .filter p{
+
+        font-size: 0.7rem;
+    }
+
+    .switch{
+
+        margin-left: 1.5rem;
+
+        border: 1px solid gray;
+        border-radius: 1em;
+
+        padding: 1.3rem 3rem 0 0.5rem !important;
+    }
+
+    @media screen and ( max-width: 990px ){
+        
+        .switch{
+                
+            padding: 0.5rem 4rem 0 0 !important;
+        }
+    }
+
+    @media screen and (max-width: 767px) {
+        
+        .search{
+            
+            display: block;
+        }
+
+        .switch{
+
+            margin: 1rem 0 0 0;
+
+            padding: 1rem 3rem 1rem 0rem !important;
+
+            display: flex;
+            justify-content: center;
+        }
+    }
+
+</style>
+
+    <div class="search">
+
+        <div id="filter">
+
+            <div class="filter">
+
+                <i class="fa-solid fa-fire"></i>
+                <p>Trending</p>
+
+            </div>
+            
+            <div class="filter">
+
+                <i class="fa-solid fa-bed"></i>
+                <p>Rooms</p>
+
+            </div>
+
+            <div class="filter">
+
+                <i class="fa-solid fa-mountain-sun"></i>
+                <p>views</p>
+
+            </div>
+
+            <div class="filter">
+
+                <i class="fa-solid fa-umbrella-beach"></i>
+                <p>Beach</p>
+
+            </div>
+
+            <div class="filter">
+
+                <i class="fa-solid fa-water-ladder"></i>
+                <p>Pools</p>
+
+            </div>
+
+            <div class="filter">
+
+                <i class="fa-solid fa-mountain-city"></i>
+                <p>Mountains</p>
+
+            </div>
+
+            <div class="filter">
+
+                <i class="fa-brands fa-fort-awesome"></i>
+                <p>Castles</p>
+
+            </div>
+
+            <div class="filter">
+
+                <i class="fa-solid fa-campground"></i>
+                <p>Camping</p>
+
+            </div>
+
+            <div class="filter">
+
+                <i class="fa-solid fa-snowflake"></i>
+                <p>Arctic</p>
+
+            </div>
+
+        </div>
+
+        <div class="form-check-reverse form-switch switch">
+            
+            <label class="form-check-label" for="flexSwitchCheckDefault">Display after total taxes</label>
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            
+        </div>
 
     </div>
 
-    <!-- <br><br>
+
+    <br>
+
+    <!--
 
     <h1 class="text-center">All Listings</h1>
 
@@ -33,6 +200,7 @@
                         <p class="card-text">
                             <b><%= listing.title %> <br></b>
                             &#8360; <%= listing.price.toLocaleString("en-pk") %> / night
+                            <i class="tax-info"> &nbsp; &nbsp;+18% GST</i>
                         </p>
                     </div>
                 </div>
@@ -54,5 +222,3 @@
     <% } %>
 
     </ul> -->
-
-</body>
