--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -14,7 +14,7 @@
 
     color: rgb(253, 38, 75);
     scale: 2;
-    margin-left: 20px;
+    margin-left: 20px; 
 }
 
 .nav-link {
@@ -64,4 +64,71 @@
 
     color: white !important;
     background-color: rgb(253, 38, 75) !important;
+}
+
+
+
+/* 
+.mobile-search{
+
+    background-color: aqua;
+
+    margin-left: 0.8rem;
+    margin-right: 0.8rem;
+
+    height: 50px;
+} */
+/* 
+.mobile-input{
+
+    width: 100vw;
+    height: 48px;
+} */
+
+.mobile-search{
+
+    display: none;
+}
+
+.nav-search-button{
+
+    display: none !important;
+    margin-right: 20px;
+}
+
+
+/* On mobile */
+
+@media screen and (max-width: 594px) {
+
+    .desktop{
+
+        display: none !important;
+    }
+
+    .d-flex{
+     
+
+        margin-left: 0.8rem;
+        margin-right: 0.8rem;
+
+
+        height: 50px;
+    }
+
+    .custom-input{
+
+        width: 100vw;
+        height: 48px;
+    }
+
+    .search-button{
+
+        width: 55px;
+    }
+
+    .nav-search-button{
+
+        display: block !important;
+    }
 }
