--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -40,6 +40,7 @@
     <script src="/js/themes.js"></script>
     <script src="/js/flash.js"></script>
     <script src="/js/taxSwitch.js"></script>
+    <script src="/js/navbar.js"></script>
 
 </body>
 </html>
