--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wander Lust</title>
     
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/png">
+
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/rating.css">
